Updated newest draft

--- a/serial/paper9/paper7.tex
+++ b/serial/paper9/paper7.tex
@@ -45,7 +45,7 @@ Hanoi, Vietnam\\
 \maketitle
 
 \begin{abstract}
-    Within the scope of this paper\footnote{The paper is not finished, this is the latest draft as of \today\ at \currenttime, will be uploaded to at least arxiv later.}, we argue that artificial general intelligence cannot emerge from current neural network paradigms regardless of scale, nor such approach is healthy for the field at present. Drawing on various notions, discussion, present-day development and observations, current debates and critiques, experiments and so on in between philosophy, including Chinese Room Argument and Godelian argument, neuroscientific idea, computer science, the theoretical consideration of artificial intelligence, and learning theory, we address conceptually that neural networks are architecturally insufficient for genuine understanding. They operate as static function approximators of a limited encoding framework - a `sophisticated sponge' exhibiting complex behaviours without structural richness that constitute intelligence. We critique the theoretical foundations the field relies on and created of recent time, for example, an interesting heuristic as \textit{neural scaling law} (for example, \cite{kaplan2020scalinglawsneurallanguage}) made prominent in a wrong way of interpretation, he Universal Approximation Theorem addresses the wrong level of abstraction, and in parts, partially, the question of current architectures lacking dynamic restructuring capabilities. We propose a framework distinguishing existential facilities (computational substrate) from architectural organization (interpretive structures), and outline principles for what genuine machine intelligence would require, and furthermore, an conceptual method of structuralize the richer framework on which the principle of neural network system takes hold. Such is then of conclusion, that the field's repeated AGI predictions fail not from insufficient compute, but from fundamental misunderstanding of what intelligence demands structurally. 
+    Within the limited scope of this paper\footnote{The paper is not finished, this is the latest draft as of \today\ at \currenttime, will be uploaded to at least arxiv later.}, we argue that artificial general intelligence cannot emerge from current neural network paradigms regardless of scale, nor such approach is healthy for the field at present. Drawing on various notions, discussion, present-day development and observations, current debates and critiques, experiments and so on in between philosophy, including Chinese Room Argument and Godelian argument, neuroscientific idea, computer science, the theoretical consideration of artificial intelligence, and learning theory, we address conceptually that neural networks are architecturally insufficient for genuine understanding. They operate as static function approximators of a limited encoding framework - a `sophisticated sponge' exhibiting complex behaviours without structural richness that constitute intelligence. We critique the theoretical foundations the field relies on and created of recent time, for example, an interesting heuristic as \textit{neural scaling law} (for example, \cite{kaplan2020scalinglawsneurallanguage}) made prominent in a wrong way of interpretation, he Universal Approximation Theorem addresses the wrong level of abstraction, and in parts, partially, the question of current architectures lacking dynamic restructuring capabilities. We propose a framework distinguishing existential facilities (computational substrate) from architectural organization (interpretive structures), and outline principles for what genuine machine intelligence would require, and furthermore, an conceptual method of structuralize the richer framework on which the principle of neural network system takes hold. Such is then of conclusion, that the field's repeated AGI predictions fail not from insufficient compute, but from fundamental misunderstanding of what intelligence demands structurally. 
 \end{abstract}
 
 Large Language Model, or LLM (\cite{vaswani2017attention,devlin2019bert,brown2020language,zhao2023llmsurvey,zhao2024llmsurvey2,radford2019language,radford2018improving,raffel2020exploring,touvron2023llama,touvron2023llama2,chowdhery2022palm,ouyang2022training,wei2022chain,kaplan2020scaling,hoffmann2022training,bai2022constitutional}) is one of the most successful, most advanced, and most developed type of model in the current modern machine learning landscape, and of AI (Artificial Intelligence) research at large. Its success has not been lacking, and its reputation and widespread uses have been proved over time. The effect of LLM has been realized, and indeed has been changing the landscape of society in a very much difficult way. Latest model of such architecture, like \cite{openai_gpt5_2025,wang2025capabilitiesgpt5multimodalmedical,openai_inside_gpt5_2025} GPT-5, \cite{guo_deepseek_r1_2025,deepseek_hf_2025}'s DeepSeek AI, \cite{anthropic_claude3_modelcard_2024,anthropic_tracing_thoughts_2025}'s Claude AI, \cite{touvron_llama_2023}'s LLaMA, \cite{chowdhery_palm_2022,anil_palm2_2023}'s PaLM / PaLM-2, and \cite{jiang_mistral7b_2023,mistral_blog_2023}'s Mistral (Mistral-7B), pushed this boundary further and further, and levelling up many tasks and purposes with AI system in practice, and further onward with techniques like \cite{wei2022chain}'s \textit{Chain-of-Thought prompting}, \cite{kaplan2020scaling}'s scaling law, and more (\cite{hoffmann2022training,bai2022constitutional}).
@@ -341,6 +341,11 @@ Continuing, practical problems range from grokking (\cite{power2022grokking,davi
 \subsection{The end goal of AGI}
 
 With that said, what is the end goal of AGI? In all of it, the central goal is supposed to be the creation, out from the doctrine of fragmented intelligence, a unification in which we can then centralize everything in a singular artificial intelligence system, hence AGI. However, as we stated, the term AGI can be further dissected to subsets of such AGI construct, and even then, different system has different AGI threshold. Thereby, the end goal is not clarified yet. What we are seeing instead is a wave of hysteria, from people afraid of the incremental development, and the current market bubble generated from the present AI boom, all of which in turn, pushes the notion of `building AGI' further and further to the truth. Such is also amplified of the outlook to the concept of ASI, of which is sold in the general media as the next stage on which post-scarcity can be achieved, where Nobel-level researches are outputted every few days, and automation leaves human of no burdensome tasks. However, with what is being done right now, it seems like such outlook cannot be realized, at least in due time. 
+
+The conflict in which the philosophy of which promised AGI to the public, as well as the optimistic outlook of people and thinkers, perhaps can be reflected in the sense of Heideggerian philosophy, or famously so, the philosophy between \textbf{ready-to-hand} (Zuhandenheit) and \textbf{present-at-hand} (Vorhandenheit) (\cite{heidegger1962being,dreyfus1991being}). Heidegger simply explains, of the notion in which the object appears in front of us. In a sense, the subject of question, and the person of inspection, of all but anthropocentric. For Heidegger, most of the time we are involved in the world in an ordinary way or "ready-to-hand." We are usually doing things with a view to achieving something, and hence, with a purpose already configured, and project such voice outward. The being of the ready-to-hand announces itself as a field of equipment to be put to use, and hence ultimately defines itself around such action and potential. A famous example of such notion is the hammer analogy. In question toward what the hammer can do, whether because from intuition or else, we extrapolate such object of its functionality, instead of inclining on the more sophistry of decompositions and analysing components. Such knowledge can then be made trivial, or thus transferred to a lower priority of thought, of which to the point where one can talk comfortably of other subjects or adjacent topics, but do not require careful contemplation to the original consideration (the hammer). The reversal of such action happens in isolation, in a typical understanding of which decomposition is required, structural knowledge needs to be formed, and so forth, such is to say we purposefully study such object similar to a scientist in idealization studies carefully of certain object, and hence, defers its meaning and existence to the notion of it "exist" to be there. That is the idea of present-at-hand.
+
+It is then fairly connective to approach from certain angle, that concerning Heidegger's notion, our AGI system, plus the non-elucidating way of studying the architecture of choice for such endeavour of AGI, we deliberately refuse the notion of present-at-hand for a more ready-to-hand, in some cases to the extreme of \textit{empiricism}, of which then also founded the principle of agentic AI system. This can be applied to even further, as to the normal principle and conceptual architecture of artificial intelligence system in an agent-environment scheme as being inadequate, correct, but not enough (\cite{stanford2018ai}). There will be, ultimately, a wall in which this approach cannot reach, as to there exists too many permutations of a path such that there exists fundamentally, of a statistical approach, to be an almost zero chance in which such can happen, within the wrong mode of understanding, both from the perspective of the designer, and the perspective of the construct itself. In the same spirit of the UAT theorem, we can say that the optimism will be, to a certain point, similar to saying "Somewhere in the space of all possible English sentences, one perfectly describes quantum gravity.". Interesting and true (probably), but useless.
+
 
 \clearpage
 
