--- a/serial/paper9/references.bib
+++ b/serial/paper9/references.bib
@@ -4316,4 +4316,20 @@ abstract = {The population loss of trained deep neural networks has been empiric
   doi = {10.1109/4235.585893},
   url = {https://www.cs.ubc.ca/~hutter/earg/papers07/00585893.pdf}
 }
+@book{heidegger1962being,
+  author    = {Martin Heidegger},
+  title     = {Being and Time},
+  year      = {1962},
+  publisher = {Harper \& Row},
+  address   = {New York},
+  translator= {John Macquarrie and Edward Robinson},
+  note      = {Originally published in German as \textit{Sein und Zeit} (1927)}
+}
+@book{dreyfus1991being,
+  author    = {Hubert L. Dreyfus},
+  title     = {Being-in-the-World: A Commentary on Heidegger's Being and Time, Division I},
+  year      = {1991},
+  publisher = {MIT Press},
+  address   = {Cambridge, MA}
+}
 
