update version now

--- a/serial/paper9/paper7.tex
+++ b/serial/paper9/paper7.tex
@@ -273,11 +273,21 @@ Other than such, treatments of empiricism on such artificial intelligence theory
 
 In all of artificial intelligence theory foundation, one if not the most important aspect, and hence field of research that now dominated the field, is the theory of learning. Inherently, from the onset, the particular intelligent behaviour that one can instantly attribute to a construct to be called intelligent, is the ability for it to learn. The notion of learning is difficult to define, hence current theory seek to determine the mechanical equivalent in mathematical form instead, of which is expressed using the current \textbf{machine learning theory}, \cite{10.1145/1968.1972,wolpert1996lack,shalev-shwartz2010learnability}. In between the learning theory, there exists the fundamental main side, one of which is concerned with pure logical encoding, or rather learning machines of symbolic logic with applications in a wide range of different fields, as seen in \cite{1056797NewellSimon,newell1959gps,winograd1972understanding,michalski1969aq}, \cite{minsky1961steps,minsky1968semantic}, and \cite{quinlan1986induction}. On the other side, is the looser end of the learning theory, which seeks phenomenological learning through enough inferences onto data, or rather, information-based learning, attributing learning to pattern recognitions on \textbf{observables} of specific problem set, as seen of \cite{solomonoff1964formal1,solomonoff1964formal2,gold1967language,newell1958elements,cover1965geometrical}, and its formal treatment in theory by \cite{vapnik1968uniform,Vapnik1999-VAPTNO,vapnik1971uniform,valiant1984learnable,angluin1988queries,computationallimits1989,board1992necessity,STL_Hajek_Maxim_2021,10.5555/2371238,10.5555/2621980}. 
 
-Learning theory is regarded strongly as one of the most important part of a model in the modern modelling landscape. In essence, 
+Learning theory is regarded strongly as one of the most important part of a model in the modern modelling landscape. In essence, it is considered detrimental to lift yp the problem of which previous version and generation of symbolic and rule-based AI of their rigidity made. Hence, the learning theory often makes use of the notion of statistical phenomenological approximation, and different methods to construct models and expression that take into accounts information, deviations, noisy settings, and thus can be applied more generally and of specific setting accurate of observations. 
 
 These two are fundamentally different approach, yet of the same goal of learning, or adaptation of reasoning and \textit{unseen situation} of which then previous knowledge can be applied in certain way, or by extrapolate new information using a copula of approach, either by observation or by deductions. Despite their success, symbolic learning is plagued with its own originality --- it cannot be scaled effectively, it is too rigid for such understanding to be made, and it is inefficient in handling truth or logic outside its rigid domain. Statistical learning, or rather learning by data in its pure form, relies on the model of \textit{black-box} modelling approach, usually not totally by can be seen of as the \textit{grey-box} modelling, which has its own problem about interpreting the concept wrongly, surface-level phenomenological approach which leads to insufficiency of mechanical details that underlies the concept that it learns, the reliance on data and large scale observation sets, while being scalable remains deeply mystery, of which cannot be explained (so-called inexplainable AI/DL), unanswerable questions regarding the different phenomena and computational process, results and performances, additionally structural interpretation, and so on. Furthermore, the theoretical treatment itself is fragmented, with many theories competing for interpretation and explanation in the wide spectrum, and with many different non-unified outlook of the same system dynamic, for example, \cite{mcallester1999some,alquier2008pac,haussler1996rigorous,jeon2025informationtheoreticfoundationsmachinelearning,abreu2025topologicalmachinelearningunreduced}, and so on. For the large majority of current theoretical treatment of machine learning, it is stuck interpreting a fixed domain of result and setting, reliance on interpretation of the statistical parameterized model $\theta$, and using learning strictly in the domain of optimization theory only. Newer frontier in architectural researches, such as modern deep learning \cite{marcus2018deep,goodfellow2016deep,10.5555/2721661}, proves tremendously difficult to fully understanding using such theory, as for many of unanswerable questions were born from such architecture alone. The ergonomic and logistic of a unified theory of learning, either both symbolic (experts' voice of unifying both phenomenological learning with symbolic knowledge) has become apparently so large in the eye of practitioners that some inherently try to create new theory of interpreting the learning framework, or push further in some directions regarding such, of which then again, mimic the 1970s-1980s age of artificial intelligence discovery, where many interpretation, exotic AI systems, and prototypes exist far and large. 
 
 It is undoubtedly successful of advancements and technological leap that the current theories landscape has provided with regard to artificial intelligence knowledge, for example, of figuring out a system better in some regard, human counterparts. Yet, it is clear to see that such theory is not capable of handling various degree of new problems, of new consideration, and of new standards of which has been hidden from the main argument of AI development, the question of interpretability, the question of originality, many questions of behavioural concepts, such as the question on "common sense learning" (while it is foolish to study this at this stage). It is clear that we either need a unification of all such learning concept, and a new development of a more powerful learning framework, or to jump the bandwagon entirely; or something else. 
+
+The main critique also lies in the heart of the current implementation of the machine and its learning process as of date. Indeed, one can see a learning process as not the machine itself, but as two separated entities: the pair $(\mathcal{A},\mathcal{M})$ of the algorithm $\mathcal{A}$ for the process of learning, and the model $\mathcal{M}$ itself. While being considered such, it is in fact concerning, at least in certain part of the dialogue between the camp of learning theorist, and others, is the claim of which the machine or model itself is already learning, while in fact it is not. 
+
+\begin{figure}[htb]
+    \centering
+    \includegraphics[width=0.7\textwidth]{learningagent.png}
+    \caption{The conceptual framework of a learning agent (\cite{stanford2018ai}). The agent itself in such framework then indeed, internally `understand' the metric notion of mistake, knowing and then fixing, typical process of which a learning system can be considered.}
+\end{figure}
+
+As such, for those argued that machine can already learn and think, it is instead a very sophisticated pattern matching and statistical inferencing process. In typical situation, model in inference typically can be considered as post-dynamic, since they have been through the process of active construction and optimization, and thus at such point remains static for accurate prediction. Of the argument of which it can `somehow store memory', such can be said of the regime in which RNNs or LSTM, of which takes into account of the encoding, historic and compressed memory influence between passing, and further on of the same principle as TNN (Transformer). The lag and processing speed can be clearly shown with lengthened discussion, as evidence. Furthermore, the process of learning itself is external, meaning that even the basic structural sophistry of which we consider the learning agent is already insufficient with respect to current ML systemand models. Instead, what we are having is in fact a toolset, of which effective in making such model to a certain degree of prediction and statistical inference, but intrinsically cannot learn, and intrinsically black-box. 
 
 \subsubsection{Architectural Insufficiency}
 
@@ -351,14 +361,15 @@ It is then fairly connective to approach from certain angle, that concerning Hei
 
 \section{Future of Artificial Intelligence}
 
+The future of artificial intelligence under the current framework looks bleak. Indeed, such can be said of every `matured' enough research and resource-intensive master research plan, and thus, we would have to consider a almost likely slowdown and perhaps not so dramatically, a winter age again for adoptions and maturity in other facet of technological application. During such time, however, we might as well look at what to do to try resolving such problem. 
 
 \subsection{Neural architecture formalism}
 
-We would argue that the neural network idea is indeed, formal and foundational, more thatn it is usually attributed of. Formally, a neural architecture follows inspiration from the biological neuron in the human brain, and thus employ the philosophy of unit-based processing (\cite{Rosenblatt1958ThePA,10.5555/50066,mcculloch_logical_1943}). This implies various properties. First, they are categorized conceptually into units of processing, of which all neuron $n$ admits the structure $(I,M,O)$, of the input receiver $I$, the internal processor $M$, and the output transceiver $O$. Any neuron admitting this structure then can be constructed, combined, and fully realized at will. Conceptually, this created the \textit{typed} of the neuron architecture, in which all structures would have the same type for operations, such as composition of two neurons, $n_{1}\circ n_{2}=n_{2}(n_{1})$, in this case connected to each other by sequential move, for all neuron to have the sequential operation $n_{i}: I_{i}\times M_{i}\to O_{i}$. In practice, handling this might require more careful planning, but nevertheless the structure is particularly streamlined. Another property that is implied is the recursive structure that can be employed. Intrinsically, the admission of $(I,M,O)$ structure implies that any given structure can mutate $M$ for different purposes, for different processing and thereof, as long as $I$ and $O$ stays as immovable component of the neural structure. Then, Any nested sequence of neuron can be compressed to be a singular neuron, since the footprint of the operation $n_{1}\circ n_{2}$ is simply 
+We would argue that the neural network idea is indeed, formal and foundational, more than it is usually attributed of. Formally, a neural architecture follows inspiration from the biological neuron in the human brain, and thus employ the philosophy of unit-based processing (\cite{Rosenblatt1958ThePA,10.5555/50066,mcculloch_logical_1943}). This implies various properties. First, they are categorized conceptually into units of processing, of which all neuron $n$ admits the structure $(I,M,O)$, of the input receiver $I$, the internal processor $M$, and the output transceiver $O$. Any neuron admitting this structure then can be constructed, combined, and fully realized at will. Conceptually, this created the \textit{typed} of the neuron architecture, in which all structures would have the same type for operations, such as composition of two neurons, $n_{1}\circ n_{2}=n_{2}(n_{1})$, in this case connected to each other by sequential move, for all neuron to have the sequential operation $n_{i}: I_{i}\times M_{i}\to O_{i}$. In practice, handling this might require more careful planning, but nevertheless the structure is particularly streamlined. Another property that is implied is the recursive structure that can be employed. Intrinsically, the admission of $(I,M,O)$ structure implies that any given structure can mutate $M$ for different purposes, for different processing and thereof, as long as $I$ and $O$ stays as immovable component of the neural structure. Then, Any nested sequence of neuron can be compressed to be a singular neuron, since the footprint of the operation $n_{1}\circ n_{2}$ is simply 
 \begin{equation}
     n_{1}\circ n_{2}\equiv n_{3}: (I_{1},M_{1})\to O_{1} \to (I_{2},M_{2})\to O_{2} \equiv n_{3}: (I_{1},M_{3}(M_{1},M_{2}))\to O_{2} 
 \end{equation}
-in which we clarify $M_{3}$ as the processing equivalent of both the first and the second neuron. Thus, we can nest many structures together, changing dynamics altogether, and create different type of specialized neurons, yet with only careful planning of the pair $(I,O)$ we can operate on them together at will. In fact, one can simply also connect as many input from $n_{1}$ to $n_{2}$, neglecting the rest, and the neural structure will still work. We say that $(I,)O)$ represents the \textbf{signature} of the neural structure. A baseline, minimal neuron structure can then be defined, which fits the basic definition of a singular perceptron in theory. Let us define $\mathcal{N}_{i}$ as the $i$th arbitrary classification of neuron class. We define the criteria of minimization as
+in which we clarify $M_{3}$ as the processing equivalent of both the first and the second neuron. Thus, we can nest many structures together, changing dynamics altogether, and create different type of specialized neurons, yet with only careful planning of the pair $(I,O)$ we can operate on them together at will. In fact, one can simply also connect as many input from $n_{1}$ to $n_{2}$, neglecting the rest, and the neural structure will still work. We say that $(I,O)$ represents the \textbf{signature} of the neural structure. A baseline, minimal neuron structure can then be defined, which fits the basic definition of a singular perceptron in theory. Let us define $\mathcal{N}_{i}$ as the $i$th arbitrary classification of neuron class. We define the criteria of minimization as
 
 \begin{definition}[Minimization set]
     Let $x$ be a neuron of arbitrary neuronal classification $\mathcal{N}$. Then, the requirement of all neuron class is to be able to distinguish its component to three parts, that is, $\min_{\mathcal{N}_{i}\in \mathcal{N}}{\mathcal{N}_{i}}\equiv \mathcal{I}, \mathcal{M},\mathcal{O}$ where $\mathcal{I}$ is the input channel, $\mathcal{M}$ the internal mechanics, and the output $\mathcal{O}$. Let $i,j,k$ represents the cardinality of each part respectively, then if
@@ -406,12 +417,24 @@ For a structure that is supposed to be unit-wise constructed like neural network
     We define the base neuron class $\mathcal{N}_{1}\equiv L_{1}$ as followed. For any $\mathcal{U}\in L_{1}$ for $\mathcal{U}$ as unit-wise construction over $L_{0}$, then every $\mathcal{U}$ satisfies the input signature $\mathcal{I}_{sig}:\mathcal{E}'(\mathbb{R})\to L_{0}$, output signature $\mathcal{O}_{sig}:L_{0}\to\mathcal{E}'(\mathbb{R})$, and $\mathcal{C}_{ext}$ as extensible construction over $L_{0}$, for $\mathcal{E}'(\mathbb{R})$ particular extension on analytical encoding of $L_{0}$. The \textbf{type} template of a neural unit $\mathcal{U}\in L_{0}\equiv \mathcal{N}_{1}$ is then defined as $\mathcal{U}=\langle \mathcal{I}_{sig},\mathcal{C}_{ext},\mathcal{O}_{sig}\rangle$ where $\mathcal{I}_{sig}$ and $\mathcal{O}_{sig}$ are invariant as type. 
 \end{definition}
 
-Those definitions directly link it to type theory, while such development is perhaps more complex. In general, this specifies the \textit{type} of a particular unit using the invariant analytical typing in the general environment linking to it. This is the \textit{outer typing} of a given model construct \index{outer typing}, of which defers the type of which interaction between the environment, or the \textit{global space state} happens and what is received of such. While the ambiance space can be forgiving, such cannot be said for the typing of given structure, since it must have the correct typing for identification. The extension is then is fairly simple, but the more important notion is the equivalence of the variant $C_{ext}$ extensible unit of the inner structure itself. 
+Those definitions directly link it to type theory, while such development is perhaps more complex. In general, this specifies the \textit{type} of a particular unit using the invariant analytical typing in the general environment linking to it. This is the \textit{outer typing} of a given model construct, of which defers the type of which interaction between the environment, or the \textit{global space state} happens and what is received of such. While the ambiance space can be forgiving, such cannot be said for the typing of given structure, since it must have the correct typing for identification. The extension is then is fairly simple, but the more important notion is the equivalence of the variant $C_{ext}$ extensible unit of the inner structure itself. 
 
-While this is a prototype, it certainly focuses on the main axis of development that would be detrimental to the topic of \textit{interpretability}, capacity, analysis and so on. We can indeed, extend this particular base template of a neuron class to much greater strength, of which address partially concerns in both implementation, and analysis. Type and neuron specification classifies neuron into different \textit{class} of components instead of the mundane functional structure that we currently have, but also individualized and structuralized the \textit{connection, information} and signature aspect of a processing unit. This allows for more grounded expression and composition rule, for example, the complexity metric of individual components of a larger construction of neural network, of which then can be expressed by individual neurons, and such neuron's individual's components. Dynamics works the same, however, it will shift - instead of learning as a back-tracking process, we can express backpropagation as a kind of \textit{internal mechanism} on addition to the working framework, and the components such measures. 
+Another type of extension can also happen in the sense of $\gamma(X)$. In certain sense, $\gamma(\cdot)$ can always be richer than the cardinality encoding, but with the use of extensible precursor-usage representation. Suppose a grid-like ordering can be made of the spatial ordering type using information of the precursor $\gamma(X)$. Then, such object then is extended to be a \textit{dual-extended representation}: 
+\begin{equation}
+    X\mapsto (\gamma(X),\rho(X))\times F_{\gamma}(X)
+    \label{eq:extend_gamma}
+\end{equation}
+where $F_{\gamma}(X)$ organizes the different constituent part in cardinality argument, of positional placement, or else. Such freedom can be made and thus, categorize different extensions into various packages. This can then be extended further and further of such, thus making it more sophisticated and will reach, fundamentally, to the current neural network, its specialization and variations, and so on. Indeed, we have implicitly obtained the hierarchical construction
+\begin{equation}
+    \mathcal{P}_{0} \subset \mathcal{P}_{1} \subset \dots \mathcal{P}_{n}
+\end{equation}
+with increased specific direction of increment. This framework a notion of which in general, can be called the \textit{specific constraint chain}, in which a specific toolchain of increment recursive construction is created, from a transformation $\Phi_{i}:\mathcal{P}_{i}\to\mathcal{P}_{i+1}$, thus create a tower of hierarchy of framework. With any self-component extension, for example, at the layer $\mathcal{P}_{L}$ (of which in certain construction as $\mathcal{P}_{2}$), we can define the add-on $\Lambda_{i,X}:\mathcal{P}_{i}\to\mathcal{P}_{i}'$, that modifies the internal structure with added mass or added cardinality, but retain the core principle construct. 
 
-Furthermore, the primitive framework itself serves of a detrimental role in expressing system-wide, modelling-style and global specification of the working space. While we speak of hypothesis class $\mathcal{H}$ or $\mathcal{C}$ for example, such class can only infer, usually of specific function class, definitions, requirements, and so on. With this, we can express them both in a set-theoretical way of cardinality and field-extension similar to embedded vector space, and also encoding such as the numerical encoding typically seen in computing system, and structural addition and expression explicitly considered so. Indeed, there are problems and pitfalls, as well as the immaturity of the functional structure itself, but per a prototype, the general conceptual idea of this particular framework is fairly sound, and would be able to provide deeper insight and more sophisticated interpretation, rather than just simple neural network functions before. 
+While this is a prototype, it certainly focuses on the main axis of development that would be detrimental to the topic of \textit{interpretability}, capacity, analysis and so on. We can indeed, extend this particular base template of a neuron class to much greater strength, of which address partially concerns in both implementation, and analysis. Type and neuron specification classifies neuron into different \textit{class} of components instead of the mundane functional structure that we currently have, but also individualized and structuralized the \textit{connection, information} and signature aspect of a processing unit. This allows for more grounded expression and composition rule, for example, the complexity metric of individual components of a larger construction of neural network, of which then can be expressed by individual neurons, and such neuron's individual's components. Dynamics works the same, however, it will shift - instead of learning as a back-tracking process, we can express backpropagation as a kind of \textit{internal mechanism} on addition to the working framework, and the components such measures. In all, the framework is not category per se, but a layered analytic machinery of which naturally (or at least intended of) to construct and describe how architecture can emerge from iterated constraints extension of primitive computational units. In essence, we can also treat the framework as to say each $\mathcal{P}_{i}$ to correspond to a functional space of \textit{realizable computation} (as seen in the abstraction to $\mathbb{R}$-algebra at least), and different structural addition. Furthermore, one can also use such framework to either construct from scratch, and also enables of the process for structural optimization, basically, turning the system considered in such framework, into a basis, resource-optimization or construction game, where analytics and structural design are grouped and unified, and also taken into consideration more sophisticatedly as a resource. Such submodules implication can then also contain the \textbf{learning mechanism module}, of which now is intrinsic of the system, and not simply external of a process itself. 
 
+Furthermore, the primitive framework itself serves of a detrimental role in expressing system-wide, modelling-style and global specification of the working space. While we speak of hypothesis class $\mathcal{H}$ or $\mathcal{C}$ for example, such class can only infer, usually of specific function class, definitions, requirements, and so on. With this, we can express them both in a set-theoretical way of cardinality and field-extension similar to embedded vector space, and also encoding such as the numerical encoding typically seen in computing system, and structural addition and expression explicitly considered so. The goal is then also to provide a concrete groundwork on conceptually model the system dynamics and its constituent parts, in the face of increasing developmental pace and new architectures floating around from heuristic choices. In similar sense, using only category theory is an ill-advised method to formalize such, and hence we would like to not agree on such stance. Indeed, there are problems and pitfalls, as well as the immaturity of the functional structure itself, but per a prototype, the general conceptual idea of this particular framework is fairly sound, and would be able to provide deeper insight and more sophisticated interpretation, rather than just simple neural network functions before. 
+
+Again, such theory and treatment does not claim to solve the problem directly, as even now it is not elucidated yet if such model can be even feasible of holding certain conceptual works. Instead, what it might do is to extend and allow for the backward construction - by formalize in the sense of restructure the current messy architecture, and enable the incremental construction in both depth and breath of the neural unit concept. If such can be enabled, emergence, percolation, and so on, could be reached in due time. It is then the task to develop such theory toward maturity. 
 \subsection{The learning theoretic}
 
 \clearpage
